VarInt api rewrite
reduce code duplication, and have better code (no allocation during serialization, single calls to write instead of multiple) and pass VarInt by value, after all they are just an i32

--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -3,6 +3,9 @@ name = "pumpkin-protocol"
 version.workspace = true
 edition.workspace = true
 
+[dev-dependencies]
+rayon = "1"
+
 [dependencies]
 pumpkin-config = { path = "../pumpkin-config" }
 pumpkin-macros = { path = "../pumpkin-macros" }
