workflows: use only subject-name for attestation

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches:
       - "master"
-      - "docker-deploy"
+      - "docker-deploy-test"
 
 jobs:
   docker-build-deploy:
@@ -51,5 +51,4 @@ jobs:
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
