--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -8,6 +8,7 @@ serde.workspace = true
 uuid.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
+log.workspace = true
 
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 colored = "2"
