--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,4 @@ services:
     ports:
       - 25565:25565
     volumes:
-      - ./configuration.toml:/pumpkin/configuration.toml
-      - ./features.toml:/pumpkin/features.toml
+      - ./config:/config
