--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -10,8 +10,12 @@ pumpkin-core = { path = "../pumpkin-core" }
 serde.workspace = true
 serde_json.workspace = true
 
+rayon.workspace = true
+
 num-traits.workspace = true
 num-derive.workspace = true
 
 # nbt
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
+
+itertools.workspace = true
