--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -69,12 +69,11 @@ png = "0.17.14"
 # logging
 simple_logger = { version = "5.0.0", features = ["threads"] }
 time = "0.3.36"
+sys-info = "0.9.1"
 
 # commands
 async-trait = "0.1.83"
 
-# git version tag
-git-version = "0.3.9"
-
 [build-dependencies]
 winresource = "0.1.17"
+git-version = "0.3.9"
