--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -9,6 +9,7 @@ uuid.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
 log.workspace = true
+serde_json.workspace = true
 
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 colored = "2"
