--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -68,9 +68,12 @@ png = "0.17.14"
 
 # logging
 simple_logger = { version = "5.0.0", features = ["threads"] }
+time = "0.3.36"
+sys-info = "0.9.1"
 
 # commands
 async-trait = "0.1.83"
 
 [build-dependencies]
 winresource = "0.1.17"
+git-version = "0.3.9"
