--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -4,12 +4,12 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+pumpkin-nbt = { path = "../pumpkin-nbt" }
 serde.workspace = true
 uuid.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
 
-fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 colored = "2"
 md5 = "0.7.0"
 
