--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 pumpkin-protocol = { path = "../pumpkin-protocol" }
+pumpkin-nbt = { path = "../pumpkin-nbt" }
 pumpkin-core = { path = "../pumpkin-core" }
 
 serde.workspace = true
@@ -14,8 +15,5 @@ rayon.workspace = true
 
 num-traits.workspace = true
 num-derive.workspace = true
-
-# nbt
-fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 
 itertools.workspace = true
