--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0-dev"
 description = "Empowering everyone to host fast and efficient Minecraft servers."
 edition = "2021"
 
-[package.metadata.winresource]
+[package.metadata.tauri-winres]
 # FileDescription is handled as the Program name by Windows!
 FileDescription = "Pumpkin"
 OriginalFilename = "pumpkin.exe"
@@ -75,5 +75,5 @@ sys-info = "0.9.1"
 async-trait = "0.1.83"
 
 [build-dependencies]
-winresource = "0.1.17"
+tauri-winres = "0.1.1"
 git-version = "0.3.9"
