Made registry values consistent

--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -8,6 +8,8 @@ pumpkin-protocol = { path = "../pumpkin-protocol" }
 pumpkin-nbt = { path = "../pumpkin-nbt" }
 pumpkin-core = { path = "../pumpkin-core" }
 
+indexmap = { version = "2.6.0", features = ["serde"] }
+
 serde.workspace = true
 serde_json.workspace = true
 
