--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ edition = "2021"
 lto = true
 codegen-units = 1
 
+[profile.bench]
+debug = true
+
 [profile.profiling]
 inherits = "release"
 debug = true
