--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -5,10 +5,8 @@ edition.workspace = true
 
 [dependencies]
 pumpkin-core = { path = "../pumpkin-core" }
-pumpkin-nbt = { path = "../pumpkin-nbt" }
 pumpkin-macros = { path = "../pumpkin-macros" }
 
-bytes.workspace = true
 tokio.workspace = true
 rayon.workspace = true
 derive_more.workspace = true
@@ -30,6 +28,8 @@ lz4 = "1.28.0"
 
 enum_dispatch = "0.3.13"
 derive-getters = "0.5.0"
+
+fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 
 noise = "0.9.0"
 
