Move to own NBT crate (Mostly) (#100)
* Remove fastnbt as dependency

* Move to own NBT crate

* Added deserialization

Also replaced i8 bool's with bool's

* Use: fastnbt for pumpkin-world

Until i don't figure out why Arrays do not work, we can use fastnbt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ thiserror = "2"
 num-traits = "0.2"
 num-derive = "0.4"
 
+bytes = "1.8"
+
 # Concurrency/Parallelism and Synchronization
 rayon = "1.10.0"
 parking_lot = { version = "0.12.3", features = ["send_guard"] }
