--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 itertools = "0.13.0"
+
+# macros
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = "2.0"
+prettyplease = "0.2.25"
