--- a/pumpkin-macros/Cargo.toml
+++ b/pumpkin-macros/Cargo.toml
@@ -7,12 +7,11 @@ edition.workspace = true
 proc-macro = true
 
 [dependencies]
-pumpkin-core = { path = "../pumpkin-core" }
-
 serde.workspace = true
 serde_json.workspace = true
 itertools.workspace = true
 
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = "2.0"
+proc-macro2.workspace = true
+quote.workspace = true
+syn.workspace = true
+prettyplease.workspace = true
