--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 resolver = "2"
 members = [
+    "pumpkin-api",
+    "pumpkin-api-macros",
     "pumpkin-config",
     "pumpkin-core",
     "pumpkin-entity",
