Update .gitignore to include specific plugin file types

--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,9 @@ Cargo.lock
 #.idea/
 
 # === PROJECT SPECIFIC ===
-plugins/*
+plugins/**/*.so
+plugins/**/*.dylib
+plugins/**/*.dll
 world/*
 
 # docker-compose
