--- a/pumpkin-api-macros/Cargo.toml
+++ b/pumpkin-api-macros/Cargo.toml
@@ -11,4 +11,4 @@ syn = { version = "2.0.89", features = ["full"] }
 quote = "1.0.37"
 proc-macro2 = "1.0.92"
 once_cell = "1.20.2"
-pumpkin-api = { path = "../pumpkin-api" }
+pumpkin = { path = "../pumpkin" }
