--- a/pumpkin-config/Cargo.toml
+++ b/pumpkin-config/Cargo.toml
@@ -7,5 +7,7 @@ edition.workspace = true
 pumpkin-core = { path = "../pumpkin-core" }
 serde.workspace = true
 log.workspace = true
-
+uuid.workspace = true
+tokio.workspace = true
+serde_json.workspace = true
 toml = "0.8"
