--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 pumpkin-core = { path = "../pumpkin-core" }
 pumpkin-config = { path = "../pumpkin-config" }
 pumpkin-macros = { path = "../pumpkin-macros" }
+pumpkin-nbt = { path = "../pumpkin-nbt" }
 
 tokio.workspace = true
 rayon.workspace = true
@@ -17,6 +18,7 @@ serde.workspace = true
 serde_json.workspace = true
 log.workspace = true
 parking_lot.workspace = true
+bytes.workspace = true
 
 num-traits.workspace = true
 num-derive.workspace = true
@@ -29,8 +31,6 @@ lz4 = "1.28.0"
 
 enum_dispatch = "0.3.13"
 derive-getters = "0.5.0"
-
-fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 
 noise = "0.9.0"
 
