--- a/pumpkin-macros/Cargo.toml
+++ b/pumpkin-macros/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 proc-macro = true
 
 [dependencies]
+pumpkin-data = { path = "../pumpkin-data" }
+
 serde.workspace = true
 serde_json.workspace = true
 itertools.workspace = true
