Disable doctest for lib target on pumpkin crate

--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -12,6 +12,7 @@ LegalCopyright = "Copyright © 2024 Aleksander Medvedev"
 
 # Required to expose pumpkin plugin API
 [lib]
+doctest = false
 
 [dependencies]
 # pumpkin
