--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ gradle-app.setting
 *.zip
 *.tar.gz
 *.rar
-
+configuration.toml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
