--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -18,8 +18,7 @@ log.workspace = true
 tokio.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
-
-bytes = "1.8"
+bytes.workspace = true
 
 # encryption
 aes = "0.8.4"
