--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 pumpkin-nbt = { path = "../pumpkin-nbt" }
 serde.workspace = true
+bytes.workspace = true
 uuid.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
