--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -8,6 +8,7 @@ edition.workspace = true
 pumpkin-world = { path = "../pumpkin-world" }
 pumpkin-registry = {path = "../pumpkin-registry"}
 pumpkin-macros = { path = "../pumpkin-macros" }
+pumpkin-core = { path = "../pumpkin-core" }
 
 log.workspace = true
 rayon.workspace = true
