feat: add basic schema auto-generator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
+members = [ "generate-schemas",
     "pumpkin-config",
     "pumpkin-core",
     "pumpkin-entity",
