--- a/plugins/hello-plugin-source/Cargo.toml
+++ b/plugins/hello-plugin-source/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["dylib"]
 [dependencies]
 pumpkin = { path = "../../pumpkin" }
 pumpkin-core = { path = "../../pumpkin-core" }
+pumpkin-protocol = { path = "../../pumpkin-protocol" }
 pumpkin-api-macros = { path = "../../pumpkin-api-macros" }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.19"
