--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -83,4 +83,9 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - uses: Swatinem/rust-cache@v2
-      - run: cargo clippy --release --all-targets --all-features
+      - run: cargo clippy --release --all-targets --all-features --message-format=json | clippy-sarif | tee results.sarif
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure()
+        with:
+          sarif_file: results.sarif
