Implement session.lock
Lock session.lock so other processes know that we currently read and write to the level. This is vanilla behavior.

Test:
Tested to start the a new server while on was locking the file, and got `Failed to lock level: AlreadyLocked("session.lock")` as expected

--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -25,6 +25,8 @@ dashmap = "6.1.0"
 flate2 = "1.0"
 lz4 = "1.28.0"
 
+file-guard = "0.2.0"
+
 enum_dispatch = "0.3.13"
 
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
