--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -18,3 +18,5 @@ thiserror.workspace = true
 
 num-traits.workspace = true
 num-derive.workspace = true
+rand = "0.8.5"
+uuid = { version = "1.11.0", features = ["v4"] }
