--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -8,8 +8,8 @@ pumpkin-nbt = { path = "../pumpkin-nbt" }
 serde.workspace = true
 bytes.workspace = true
 uuid.workspace = true
-num-traits.workspace = true
-num-derive.workspace = true
+
+num-traits = "0.2"
 
 colored = "2"
 md5 = "0.7.0"
