--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,3 +59,4 @@ uuid = { version = "1.11.0", features = ["serde", "v3", "v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_with = "3.12"
